--- a/main.css
+++ b/main.css
@@ -233,7 +233,8 @@ footer {
 }
 
 /*  ======================modal styling */
-#postForm{
+#postForm,
+#attention{
     display: block;
     justify-content: center;
     align-items: center;
