--- a/main.css
+++ b/main.css
@@ -29,9 +29,16 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 #lk{
  text-decoration: none;
+}
+#lk:hover{
+ text-decoration: none;
+ background-color: transparent;
+ color: black;
+ transition: 1s;
 }
 
 /* section hero */
@@ -40,10 +47,16 @@ nav {
     width: 100%;
     height: 500px;
     
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
 }
+/* .background-clip{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    top: 140px;
+    z-index: -1;
+    width: 100%;
+    height: 700px;
+} */
 #headingHero,
 #paragraphHero,
 #linkHero{
@@ -249,4 +262,20 @@ footer {
 #inpForm:focus{
     border: 2px solid blue;
 }
+
+
+
+/* page admin dashboard */
+
+
+
+
+
+
+
+
+
+
+
+
 
